environments/master/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chay-techs-deployments
  namespace: chay-techs-production
  labels:
    app: chay-techs
    environment: production
spec:
  replicas: 3
  selector:
    matchLabels:
      app: chay-techs
  template:
    metadata:
      labels:
        app: chay-techs
        environment: production
    spec:
      containers:
        - name: chay-techs
          image: harbor.chay-techs.com/portfolio/portfolio-front:master_54ff3bb

          ports:
            - containerPort: 3000
      imagePullSecrets:
        - name: harbor-registry-key
